# audacity

./: CMakeLists.txt  configure  make-noise.txt  my-journal.txt
cmake-proxies/breakpad/: CMakeLists.txt
crashreports/: BreakpadConfigurer.cpp  BreakpadConfigurer.h  CMakeLists.txt
crashreports/crashreporter/: CMakeLists.txt  CrashReportApp.cpp  CrashReportApp.h
libraries/: CMakeLists.txt
libraries/lib-active-project/: ActiveProject.cpp  ActiveProject.h  CMakeLists.txt
libraries/lib-audio-devices/: AudioIOBase.cpp  AudioIOBase.h  AudioIOExt.h  CMakeLists.txt  DeviceChange.h  DeviceManager.cpp  DeviceManager.h  Meter.h
libraries/lib-audio-io/: AudioIO.cpp  AudioIO.h  AudioIOExt.h  CMakeLists.txt  PlaybackSchedule.h  ProjectAudioIO.cpp  ProjectAudioIO.h  RealtimeEffectManager.cpp  RealtimeEffectManager.h
libraries/lib-basic-ui/: BasicUI.h
libraries/lib-cellular-panel/: BackedPanel.cpp  BackedPanel.h  CMakeLists.txt  CellularPanel.cpp  CellularPanel.h  HitTestResult.h  Overlay.h  OverlayPanel.cpp  OverlayPanel.h  TrackPanelCell.h  TrackPanelDrawable.h  UIHandle.cpp  UIHandle.h
libraries/lib-clipboard/: CMakeLists.txt  Clipboard.cpp  Clipboard.h
libraries/lib-command-manager/: CMakeLists.txt  CommandContext.cpp  CommandContext.h  CommandFlag.cpp  CommandFlag.h  CommandFunctors.h  CommandID.h  CommandManager.cpp  CommandManager.h  CommandTargets.cpp  CommandTargets.h  JournalWindowPaths.cpp  Keyboard.cpp  Keyboard.h  MenuHandle.h  Menus.cpp  Menus.h
libraries/lib-common-command-flags/: CMakeLists.txt  CommonCommandFlags.cpp  CommonCommandFlags.h
libraries/lib-components/: CMakeLists.txt  ComponentInterfaceSymbol.h  EffectAutomationParameters.h  EffectHostInterface.h  EffectInterface.cpp  EffectInterface.h
libraries/lib-exceptions/: CMakeLists.txt
libraries/lib-ffmpeg-support/: FFmpegFunctions.cpp
libraries/lib-files/: AudacityLogger.cpp  AudacityLogger.h  CMakeLists.txt  FileIO.cpp  FileNames.cpp  FileNames.h  TempDirectory.cpp
libraries/lib-help-system/: CMakeLists.txt  HelpSystem.cpp  HelpSystem.h  HelpText.cpp  HelpText.h  HtmlWindow.h
libraries/lib-keyboard-capture/: CMakeLists.txt  CommandManagerWindowClasses.h  KeyboardCapture.cpp  KeyboardCapture.h
libraries/lib-math/: Dither.cpp  FFT.h  Resample.cpp  SampleCount.cpp  SampleFormat.h
libraries/lib-menus/: BasicMenu.cpp  BasicMenu.h  CMakeLists.txt  Keyboard.cpp  Keyboard.h  MenuHandle.cpp  MenuHandle.h  wxWidgetsWindowPlacement.h
libraries/lib-module-manager/: CMakeLists.txt  ModuleManager.cpp  ModuleManager.h  ModuleSettings.cpp  PluginManager.cpp  PluginManager.h
libraries/lib-preferences/: Prefs.cpp  Prefs.h
libraries/lib-preferences-dialog/: CMakeLists.txt  PrefsDialog.cpp  PrefsDialog.h  PrefsPanel.cpp  PrefsPanel.h
libraries/lib-project/: CMakeLists.txt  Project.cpp  Project.h  ProjectStatus.h
libraries/lib-project-file-io/: CMakeLists.txt  DBConnection.h  ProjectFileIO.cpp  ProjectFileIO.h  ProjectSerializer.cpp  ProjectSerializer.h
libraries/lib-project-history/: CMakeLists.txt  ProjectHistory.h  UndoManager.cpp  UndoManager.h
libraries/lib-project-rate/: ProjectRate.cpp  ProjectRate.h
libraries/lib-project-windows/: CMakeLists.txt  ProjectWindowBase.h  ProjectWindows.cpp  ProjectWindows.h
libraries/lib-registries/: AttachedVirtualFunction.h  CMakeLists.txt  ClientData.h  Registry.cpp  Registry.h
libraries/lib-sample-track/: CMakeLists.txt  Mix.cpp  Mix.h  SampleTrack.h
libraries/lib-screen-geometry/: CMakeLists.txt  Decibels.cpp  Decibels.h  SelectedRegion.cpp  SelectedRegion.h  ViewInfo.cpp  ViewInfo.h  ZoomInfo.cpp  ZoomInfo.h
libraries/lib-shuttlegui/: CMakeLists.txt  ReadOnlyText.h  Shuttle.cpp  Shuttle.h  ShuttleGui.cpp  ShuttleGui.h  WrappedType.cpp  WrappedType.h
libraries/lib-strings/: CMakeLists.txt  Identifier.cpp  Identifier.h  Internat.cpp  Internat.h  Languages.cpp  Languages.h  TranslatableString.cpp  TranslatableString.h  wxArrayStringEx.cpp  wxArrayStringEx.h
libraries/lib-theme/: AColor.cpp  AllThemeResources.h  CMakeLists.txt  ImageManipulation.cpp  MacroMagic.h  Theme.cpp  Theme.h  ThemeImageDefsAsCee.h
libraries/lib-theme-resources/: CMakeLists.txt  imageCompilerMain.cpp
libraries/lib-track/: CMakeLists.txt  Envelope.cpp  Envelope.h  TimeWarper.cpp  Track.cpp  Track.h  TrackAttachment.cpp  TrackAttachment.h
libraries/lib-track-selection/: CMakeLists.txt  SelectionState.h  SyncLock.cpp  SyncLock.h
libraries/lib-track-view/: CMakeLists.txt  CommonTrackPanelCell.cpp  CommonTrackPanelCell.h  TrackArtist.cpp  TrackArtist.h  TrackControls.cpp  TrackControls.h  TrackVRulerControls.cpp  TrackVRulerControls.h  TrackView.cpp  TrackView.h
libraries/lib-transactions/: CMakeLists.txt  TransactionScope.cpp  TransactionScope.h
libraries/lib-utility/: MemoryX.h  Observer.cpp  Observer.h
libraries/lib-uuid/: CMakeLists.txt
libraries/lib-wave-track/: CMakeLists.txt  MixAndRender.h  SampleBlock.h  Sequence.cpp  Sequence.h  WaveClip.cpp  WaveClip.h  WaveTrack.cpp  WaveTrack.h
libraries/lib-widgets/: AButton.cpp  AButton.h  ASlider.cpp  ASlider.h  AttachableScrollBar.cpp  AttachableScrollBar.h  AudacityMessageBox.h  CMakeLists.txt  ExpandingToolBar.cpp  Grid.cpp  Grid.h  ImageRoll.cpp  ImageRoll.h  MeterPanelBase.cpp  MeterPanelBase.h  NumericTextCtrl.cpp  NumericTextCtrl.h  PopupMenuTable.h  (+12 more)
modules/: CMakeLists.txt
src/: #CMakeLists.txt#  AColor.cpp  AColor.h  AboutDialog.cpp  AboutDialog.h  AboutDialogGPLv2Text.cpp  ActiveProject.cpp  ActiveProject.h  ActiveProjects.cpp  AdornedRulerPanel.cpp  AdornedRulerPanel.h  AllThemeResources.h  AttachedVirtualFunction.h  Audacity.h  AudacityApp.cpp  AudacityApp.h  AudacityException.cpp  AudacityException.h  AudacityFileConfig.cpp  AudacityHeaders.h  AudacityLogger.cpp  AudacityLogger.h  AudioIO.cpp  AudioIO.h  AudioIOBase.cpp  AudioIOBase.h  AudioIOExt.cpp  AudioIOExt.h  AudioIOListener.h  AutoRecovery.cpp  AutoRecovery.h  AutoRecoveryDialog.cpp  BatchCommandDialog.cpp  BatchCommandDialog.h  BatchCommands.cpp  BatchCommands.h  BatchProcessDialog.cpp  BatchProcessDialog.h  Benchmark.cpp  Benchmark.h  (+317 more)
(+1468 files in other folders)
